--- a/src/app/theme/components/baPageTop/baPageTop.html
+++ b/src/app/theme/components/baPageTop/baPageTop.html
@@ -1,11 +1,11 @@
 <div class="page-top clearfix" baScrollPosition maxHeight="50" (scrollChange)="scrolledChanged($event)"
      [ngClass]="{scrolled: isScrolled}">
-  <a routerLink="/pages/dashboard" class="al-logo clearfix"><span>ng2-</span>admin</a>
+  <a routerLink="/pages/dashboard" class="al-logo clearfix"><span>Kyros</span>View</a>
   <a href (click)="toggleMenu()" class="collapse-menu-link ion-navicon"></a>
 
   <div class="search">
     <i class="ion-ios-search-strong" ng-click="startSearch()"></i>
-    <input id="searchInput" type="text" placeholder="Search for...">
+    <input id="searchInput" type="text" placeholder="Buscar...">
   </div>
 
   <div class="user-profile clearfix">
@@ -14,9 +14,9 @@
         <img src="{{ ( 'Nasta' | baProfilePicture ) }}">
       </a>
       <ul class="dropdown-menu top-dropdown-menu profile-dropdown" aria-labelledby="user-profile-dd">
-        <li class="dropdown-item"><a href><i class="fa fa-user"></i>Profile</a></li>
-        <li class="dropdown-item"><a href><i class="fa fa-cog"></i>Settings</a></li>
-        <li class="dropdown-item"><a href class="signout"><i class="fa fa-power-off"></i>Sign out</a></li>
+        <li class="dropdown-item"><a href><i class="fa fa-user"></i>Perfil</a></li>
+        <li class="dropdown-item"><a href><i class="fa fa-cog"></i>Configuración</a></li>
+        <li class="dropdown-item"><a href class="signout"><i class="fa fa-power-off"></i>Salir</a></li>
       </ul>
     </div>
     <ba-msg-center></ba-msg-center>
